<resources>
    <string name="app_name">Fête de la Science</string>
    <string name="title_activity_event_">fte de la Science</string>
    <string name="titre">Titre : </string>
    <string name="thematique">Thématique: </string>
    <string name="ville">Ville</string>
    <string name="filter">Filtre</string>
    <string name="periode">Période</string>
    <string name="nbplaces">Nombre de places Disponibles</string>
    <string name="placesMax">Nombre de places Maximum</string>
    <string name="description_longue">Description</string>
    <string name="evenements">Evenements</string>


    <!--evenement informations-->
    <string name="thematiques">Thématiques</string>
    <string name="title_event">Evenements</string>
    <string name="hour_event">Horaire</string>
    <string name="description_event">DESCRIPTION : </string>
    <string name="horaire">Horaire : </string>
    <string name="organisateur">Organisateur(s) : </string>
    <string name="places_event">NOMBRE DE VISITEURS : </string>
    <string name="placesMax_event">MAXIMUM DES PLACES : </string>
    <string name="image_event"></string>
    <string name="details">Voir details </string>
    <string name="adress">Adresse</string>
    <string name="lieu">Lieu</string>
    <string name="inscription">Inscription Obligatoire  </string>
    <string name="telephone">Téléphone</string>
    <string name="title_activity_carte_">Carte_Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
